--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React App</title>
+  <title>UKS Aligator Chwarzno Gdynia</title>
   <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU6YlTr69a/4PnagfwQ1T5/3T3TwfsdJp5P+J"
     crossorigin="anonymous"
   />
+  <link rel="icon" href="/aligtyt.png" type="image/png">
 </head>
 <body>
   <div id="root"></div>
